<?xml version="1.0"?>
<package format="2">

  <name>compass_test</name>
  <version>0.0.0</version>
  <description>Testing the Phidgets 1044 compass</description>

  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>BSD</license>

  <author>Clyde McQueen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

</package>